COMPONENTS: Add Dialog

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <mat-toolbar color="primary">
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-<mat-icon>supervisor_account</mat-icon>
-</button>
-<span>Angular App</span>
-<span class="example-spacer"></span>
-<button mat-raised-button color="warn" >Add Product</button>
+    <mat-icon>supervisor_account</mat-icon>
+  </button>
+  <span>Angular App</span>
+  <span class="example-spacer"></span>
+  <button mat-raised-button color="warn" (click)="openDialog()">Add Product</button>
 </mat-toolbar>
