SERVICES: Request to Api -> WIP

--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -35,13 +35,13 @@
 
     <mat-form-field appearance="outline">
       <mat-label>Price</mat-label>
-      <input matInput placeholder="Phone" formControlName="price">
+      <input matInput placeholder="Price" formControlName="price">
       <mat-icon matSuffix>attach_money</mat-icon>
     </mat-form-field>
 
-    <mat-form-field appearance="outline" formControlName="comment">
+    <mat-form-field appearance="outline" >
       <mat-label>Comment</mat-label>
-      <textarea matInput></textarea>
+      <textarea matInput formControlName="comment"></textarea>
     </mat-form-field>
   </Form>
 
