--- a/src/app/dialog/dialog.component.html
+++ b/src/app/dialog/dialog.component.html
@@ -47,6 +47,6 @@
 
   <div mat-dialog-actions [align]="'end'">
     <button mat-raised-button color="warn" mat-dialog-close>Close</button>
-    <button mat-raised-button color="primary" (click)="addProduct()">Save</button>
+    <button mat-raised-button color="primary" (click)="addProduct()">{{actionBtn}}</button>
   </div>
 </div>
